# DMDPRIME20tools

./: pyproject.toml
PRIME20tools/parser/: read_output_files.py
