[project]
name = "DMD-PRIME20-tools"
version = "0.0.1"
authors = [
  { name="Xin Dong", email="xing1014@gmail.com" },
]
description = "A package of helper functions to analyze simulation data."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/xxyydong/DMD-PRIME20-tools"
Issues = "https://github.com/xxyydong/DMD-PRIME20-tools/issues"
